# Information-Lab

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
deploy/otel/: README.md  docker-compose.yml
docs/: README.md
docs/architecture/: README.md
docs/developer-guide/: README.md  documentation-standards.md  operations-runbook.md
docs/research-loop/: README.md
docs/user-guide/: README.md
migrations/: 0001_init.sql  0002_document_progress.sql  0003_multi_agent.sql  0004_retry_and_new_agents.sql  0005_agent_events.sql  0006_formula_latex_norm_backfill.sql  0006_research_request_tasks.sql  0008_add_research_task_kind.sql  0009_research_observability.sql  0010_search_usage_daily.sql
public/: INDEX.md  Index.md  SYSTEM_STATUS.md
public/.obsidian/: graph.json  workspace.json
public/Sources/: CV.md  D_.md  GIS.md  LA.md  OR.md
public/Topics/: 3d-photography.md  3d-reconstruction.md  3d-transformations.md  academic-literature.md  academic-references.md  affine-geometry.md  affine-projection.md  approximate-nearest-neighbor.md  arnoldi-iteration.md  artificial-intelligence.md  auto-calibration.md  automatic-differentiation.md  bayes-filter.md  bayes-filters.md  bayesian-filtering.md  bayesian-inference.md  bibliography.md  boundary-analysis.md  calculus-foundations.md  calculus.md  camera-calibration.md  canonical-forms.md  cartography.md  case-studies.md  chance-constraints.md  chebyshev-polynomials.md  cheirality.md  clustering.md  color-models.md  (+318 more)
skills/: bridge_finder.md  bridge_search_refine.md  derivation_chain.md  formula_extractor.md  formula_harvester.md  kg_extractor.md  obsidian_writer.md  report_writer.md  research_request.md  research_solver.md  researcher.md  theorem_prover.md  topic_curator.md
src/: agents.rs  api.rs  config.rs  db.rs  error.rs  formula_detect.rs  formula_norm.rs  ingest.rs  lib.rs  limiter.rs  main.rs  orchestrator.rs  scheduler.rs  status.rs  telegram.rs  telemetry.rs  tools.rs  vault.rs  watcher.rs  workflow.rs
systemd/: edge-kg-agent.service
tests/: limiter_tiers.rs  vault_split.rs
(+65 files in other folders)
