[package]
name = "edge-kg-agent"
version = "0.1.0"
edition = "2021"
description = "Edge-native autonomous pipeline converting PDFs to an Obsidian knowledge graph"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[dependencies]
# Runtime
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "fs", "sync", "time", "signal"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# Filesystem watching (zero-polling)
notify = "6.1"
notify-debouncer-full = "0.3"

# Pure-Rust PDF extraction (fastest on the Pi; designed for RAG pipelines).
pdf_oxide = { version = "0.3", features = ["parallel"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Persistent state
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

# Agentic orchestration. AutoAgents provides Agent/Tool macros, ReAct executor,
# memory, and LLM backends (incl. Google). It pulls in ractor transitively.
autoagents = { version = "0.3", features = ["google"] }
autoagents-derive = "0.3"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config / env
dotenvy = "0.15"

# Errors
thiserror = "1"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.26", default-features = false, features = ["trace", "grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.26"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
